Fixed issue #9
-> Design of left and right areas of game screen is not responsive

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html {
+  box-sizing: border-box;
+}
+*, ::before, ::after {
+  box-sizing: inherit;
+}
+
 body {
   height: 100%;
   margin: 0;
