--- a/src/screens/game/PlayerInfo.module.css
+++ b/src/screens/game/PlayerInfo.module.css
@@ -1,30 +1,33 @@
 .playerInfo {
   background-image: url(/images/backgrounds/1011.png);
+  display: grid;
+  grid-template-rows: 300px 50px auto 50px;
+  grid-row-gap: 15px;
   height: 100%;
+  overflow: hidden;
+  padding: 15px;
 }
 
 .playerPortrait {
   border: 5px solid black;
   border-radius: 15px;
-  margin-top: 25px;
-  max-height: 25%;
-  max-width: 80%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: calc(100% - 10px);
+  object-fit: cover;
 }
 
 .scoreContainer {
   background-color: black;
   border-radius: 15px;
-  height: 48px;
-  margin-left: 10%;
-  margin-top: 8px;
-  padding: 1px;
-  width: 80%;
 }
 
 .scoreContainer h2 {
   color: #fbe356;
   font-size: 40px;
-  margin-top: 8px;
+  line-height: 45px;
+  margin: 8px auto;
 }
 
 .weaponContainer {
@@ -32,32 +35,29 @@
   background-size: cover;
   border: 5px solid black;
   border-radius: 15px;
-  margin-left: calc(10% - 5px);
-  margin-top: 50px;
-  max-height: 35%;
-  max-width: 80%;
+  position: relative;
 }
 
 .selectedWeapon {
-  max-height: calc(100% - 48px);
-  max-width: 80%;
+  height: calc(100% - 50px);
+  left: 0;
+  object-fit: scale-down;
+  position: absolute;
+  width: 100%;
 }
 
 .weaponContainer h2 {
+  bottom: 0;
   color: black;
   font-size: 40px;
-  margin-top: 8px;
+  margin: 5px;
+  position: absolute;
+  width: 100%;
 }
 
 .livesContainer {
   background-color: black;
   border-radius: 15px;
-  height: 10%;
-  margin-left: 10%;
-  margin-top: 30px;
-  max-height: 25%;
-  max-width: 80%;
-  width: 80%;
 }
 
 .livesContainer img {
